# Cpp-lings

./: CMakeLists.txt  FINAL_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  README.md  SUMMARY.md  final_verification.sh  final_verification_fixed.sh  verify_curriculum.sh
.cache/clangd/index/: database_engine.cpp.2B6B969ECA2504DA.idx  image_processor.cpp.5E1500CA911D9FE4.idx  task_manager.cpp.D38871A8545A70C3.idx
Ap-cpp/: CMakeLists.txt  GETTING_STARTED.md  Makefile  README.md
Ap-cpp/concurrency/: 01_thread_basics.md  02_synchronization.md  03_async_futures.md  04_atomic_operations.md  05_memory_model.md  06_advanced_patterns.md
Ap-cpp/concurrency/examples/: 01_basic_threads.cpp  02_synchronization.cpp  03_async_futures.cpp  04_atomic_operations.cpp
Ap-cpp/templates/: 01_template_fundamentals.md  02_template_specialization.md  03_variadic_templates.md  04_sfinae_constraints.md  05_template_metaprogramming.md
Ap-cpp/templates/examples/: 01_template_fundamentals.cpp
Compiler/: CMakeLists.txt  GETTING_STARTED.md  Makefile  README.md
Compiler/llvm/: 01_llvm_introduction.md  02_llvm_ir.md
Compiler/llvm/examples/: 01_hello_llvm.cpp
Compiler/llvm/exercises/: 01_ir_generation.md
Compiler/mlir/: 01_mlir_introduction.md  02_dialects.md
Compiler/mlir/exercises/: 01_dialect_basics.md
Compiler/theory/: 01_introduction.md  02_lexical_analysis.md  03_parsing.md
Compiler/theory/examples/: 01_lexer.cpp
Compiler/theory/exercises/: 01_basic_number_lexer.md  02_expression_parser.md  EXERCISES_SUMMARY.md  PROJECT_simple_language_compiler.md  README.md
Compiler/theory/exercises/solutions/: 01_basic_number_lexer.cpp
Cuda/cuda_guide/Chapter01/: 01_cuda_introduction.md  hello_world.cu  vector_add.cu
Cuda/cuda_guide/Chapter02/: 02_memory_management.md  memory_example.cu
Cuda/cuda_guide/Chapter03/: 03_thread_programming.md  thread_example.cu
Cuda/cuda_guide/Chapter04/: 04_kernel_execution.md  kernel_execution_example.cu
Cuda/cuda_guide/Chapter05/: 05_debug_profiling.md  debug_profiling_example.cu
Cuda/cuda_guide/Chapter06/: 06_multi_gpu_programming.md  multi_gpu_example.cu
Cuda/cuda_guide/Chapter07/: 07_parallel_patterns.md  parallel_patterns_example.cu
Cuda/cuda_guide/Chapter08/: 08_cuda_libraries.md  cuda_libraries_example.cu
Cuda/cuda_guide/Chapter09/: 09_openacc.md  openacc_example.c
Cuda/cuda_guide/Chapter10/: 10_deep_learning.md  deep_learning_example.cu
Cuda/handson/: test.cu
Cuda/handson/project1_vector_operations/: README.md
Cuda/handson/project1_vector_operations/solution/: vector_ops_solution.cu
Cuda/handson/project2_matrix_multiplication/: README.md
Cuda/handson/project2_matrix_multiplication/solution/: matmul_solution.cu
Cuda/handson/project3_convolution_neural_net/: README.md
Cuda/handson/project3_convolution_neural_net/solution/: cnn_ops_solution.cu
Cuda/inference_engine/: Makefile  README.md
Cuda/inference_engine/include/: activations.h  engine.h  layers.h  utils.h
Cuda/inference_engine/src/: activations.cu  engine.cu  layers.cu  main.cu  utils.cu
Cuda/inference_engine/tutorial/: step_by_step_guide.md
Handson/: BUILD.md  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  Makefile  README.md  SUMMARY.md  build.sh  example1_basics  example2_matrix_ops  test_suite
Handson/examples/: example1_basics.cpp  example2_matrix_ops.cpp  example3_gpu_acceleration.cpp
Handson/include/: exceptions.hpp  gpu_kernels.hpp  gpu_wrappers.hpp  hpc_toolkit.hpp  matrix.hpp  optimized_kernels.hpp  stream_manager.hpp  utils.hpp  vector.hpp
Handson/src/: cpu_matrix.cpp  gpu_vector.cu
Handson/tests/: test_suite.cpp
exercises/: CMakeLists.txt  Makefile  README.md
exercises/ch0/: build_system_exercise.cpp  chapter_0_build_systems.md  hello_world.cpp
exercises/ch1/: chapter_1_basics.md  rectangle_area.cpp
exercises/ch10/: chapter_10_stl_containers_algorithms.md  stl_containers_algorithms.cpp
exercises/ch11/: chapter_11_memory_management_smart_pointers.md  memory_management.cpp
exercises/ch12/: chapter_12_exception_handling.md  exception_handling.cpp
exercises/ch13/: advanced_topics.cpp  chapter_13_advanced_topics_best_practices.md
exercises/ch14/: chapter_14_concurrency_multithreading.md  concurrency_multithreading.cpp
exercises/ch15/: chapter_15_modern_cpp_features.md  modern_cpp_features.cpp
exercises/ch2/: chapter_2_variables_types_operators.md  data_types_ops  data_types_ops.cpp
exercises/ch3/: chapter_3_control_structures_loops.md  number_guessing_game  number_guessing_game.cpp
exercises/ch4/: chapter_4_functions_scope.md  functions_exercise  functions_exercise.cpp
exercises/ch5/: chapter_5_arrays_strings.md  grade_management  grade_management.cpp
exercises/ch6/: chapter_6_pointers_references.md  pointers_refs_exercise.cpp
exercises/ch7/: chapter_7_oop_basics.md  rectangle_class.cpp
exercises/ch8/: chapter_8_advanced_oop.md  inheritance_polymorphism.cpp
exercises/ch9/: chapter_9_templates_generic_programming.md  templates_exercise.cpp
projects/: CMakeLists.txt  PROJECTS_README.md  README.md  image_processor.cpp  project2_database_engine.cpp  task_manager.cpp  tasks.csv
